--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     ],
     "require": {
         "php": "^8.4",
+        "ext-http": "*",
         "vlucas/phpdotenv": "^5.6",
         "guzzlehttp/guzzle": "^7.9",
         "symfony/serializer": "^7.2",
